--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Developer Tools - A collection of useful tools for developers"
-    />
+    
+    <!-- Favicon and Icons -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Developer Tools - kokinda.dev</title>
+    
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Developer tools by Kokinda - a suite of handy utilities for developers, including a password generator, unit converter, JSON formatter, and more." />
+    <meta name="keywords" content="developer tools, kokinda, devtools, utilities, password generator, unit converter, JSON formatter" />
+    <meta name="author" content="Kokinda" />
+
+    <!-- Title -->
+    <title>Kokinda | Tools</title>
+
+    <!-- Social Media Preview -->
+    <meta property="og:title" content="DevTools Suite - Kokinda.dev" />
+    <meta property="og:description" content="Explore a suite of developer tools to simplify your workflow - from password generation to JSON formatting." />
+    <meta property="og:image" content="%PUBLIC_URL%/social-preview.png" />
+    <meta property="og:url" content="https://kokinda.dev" />
+    <meta name="twitter:card" content="summary_large_image" />
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
